# badchat

./: .gitignore  Cargo.toml  README.md  create.sql
examples/: unicode.rs
sample-config/: Justfile  localhost-self-signed.crt  localhost-self-signed.key
src/: err.rs  ids.rs  in_map.rs  lib.rs  lined_shared.rs  main.rs  pbkdf2.rs  pre.rs  proto.rs  rhost.rs  serv.rs  store.rs
src/bad/: err.rs  mod.rs  pre.rs  proto.rs  store.rs  two.rs
src/lined/: TODO.md  admin.rs  mod.rs  worker.rs
src/serv/: mod.rs  plain.rs  tls.rs  tls_config.rs
tests/: sqlite.rs
tools/: test-cert.sh
