[package]
name = "badchat"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
dns-lookup = "1"
env_logger = "0.8"
log = "0.4.6"
maplit = "1"
mio = "0.6"
rand = "0.8"
rustls = "0.17"
vecio = "0.1"

[dependencies.pbkdf2]
version = "0.8"
features = ["simple"]

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]
