[package]
name = "badchat"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
argh = "0.1"
anyhow = "1"
dns-lookup = "1"
env_logger = "0.8"
log = "0.4.6"
maplit = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.25"
rustls-pki-types = "1"
mio = "0.6"
rand = "0.8"
rustls = "0.22"
rustls-pemfile = "2.1.0"

[dependencies.pbkdf2]
version = "0.8"
features = ["simple"]

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]
